# snake

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  app.py  dev_watch_and_build.ps1  requirements.txt
assets/: index.html  script.js
src/: game.rs  lib.rs  main.rs
src/html/: index.html
src/utils/: models.rs  routes.rs
static/: main.js  style.css
templates/: index.html
