[package]
name = "snake"
version = "0.2.0"
edition = "2021"

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
rand = "0.9"
getrandom = { version = "0.3", features = ["wasm_js"] }
lazy_static = "1.5"

[lib]
crate-type = ["cdylib", "rlib"]
